# klang

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh  syntax.k  test.k
include/: compiler.h  config.h  utility.cpp
include/ast/: all.h  ast.h  expr.h  function.h  type.h
include/codegen/: codegen.h  ir_factory.h
include/codegen/cpp/: codegen.h  ir.h
include/codegen/llvm/: codegen.h  ir.h
include/lexer/: lexer.h
include/parser/: parser.h
src/: cmd.cpp  compiler.cpp  error.h  main.cpp
src/ast/: CMakeLists.txt  type.cpp
src/codegen/: CMakeLists.txt  expr.cpp  function.cpp  stmt.cpp  type.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/parser/: CMakeLists.txt  expr.cpp  function.cpp  parser.cpp  type.cpp
tests/: function.k  function.k.ll  function.ll
